# apps.home.device-options

./: CMakeLists.txt  Contributions
edcs/: micro-gl-macro.edc  micro-poweroff.edc  micro-style.edc  system.edc
edcs/table/: poweroff-color.xml
packaging/: device-options.spec  org.tizen.poweroff-syspopup.efl  org.tizen.poweroff-syspopup.xml
src/: CMakeLists.txt
src/accessibility/: accessibility.c
src/core/: dbus-handler.c  dbus-handler.h  device-options.c  device-options.h  event-handler.c  event-handler.h  share.c  show-ui-micro.c  show-ui-normal.c  show-ui.c  show-ui.h
src/flightmode/: flightmode.c
src/mobiledata/: mobiledata.c
src/poweroff/: poweroff.c
src/restart/: restart.c
src/sound/: sound.c
src/wifi/: wifi-chn.c  wifi.c  wifi.h
