CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(device-options C)

SET(PREFIX ${CMAKE_INSTALL_PREFIX})
SET(APPNAME "poweroff-syspopup")
SET(PACKAGE "org.tizen.${APPNAME}")
SET(DO_RES_DIR "${PREFIX}/apps/${PACKAGE}/res")
SET(DO_EDJE_DIR "${DO_RES_DIR}/edje")
SET(DO_LICENSE_DIR "${PREFIX}/share/license")

SET(LOCALE_DIR "/usr/share/locale")
SET(LANG_DOMAIN "system-apps")

ADD_DEFINITIONS("-DPREFIX=\"${PREFIX}\"")
ADD_DEFINITIONS("-DAPPNAME=\"${APPNAME}\"")
ADD_DEFINITIONS("-DPACKAGE=\"${PACKAGE}\"")
ADD_DEFINITIONS("-DDO_EDJE_DIR=\"${DO_EDJE_DIR}\"")

ADD_DEFINITIONS("-DLOCALE_DIR=\"${LOCALE_DIR}\"")
ADD_DEFINITIONS("-DLANG_DOMAIN=\"${LANG_DOMAIN}\"")

INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/LICENSE.Apache_v2 DESTINATION ${DO_LICENSE_DIR} RENAME ${PACKAGE})

ADD_SUBDIRECTORY(src)
